--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
 	"manifest_version" : 2,
 	"name" : "Titech課題リスト",
-	"version" : "1.0",
-	"description": "OCW-iとT2SCHOLAの未提出課題の一覧を表示します。",
+	"version" : "1.0.1",
+	"description": "OCW-iとT2SCHOLAの未提出課題の一覧を表示します",
 	"permissions": [
 		"storage",
 		"https://portal.nap.gsic.titech.ac.jp/*",
