--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,22 @@
 {
 	"manifest_version" : 2,
 	"name" : "T2SCHOLA課題リスト",
-	"version" : "2.0.0",
+	"version" : "2.0.6",
 	"description": "T2SCHOLAの課題一覧を表示します",
 	"permissions": [
 		"storage",
 		"declarativeNetRequest",
-		"notifications",
 		"https://portal.nap.gsic.titech.ac.jp/*",
 		"https://t2schola.titech.ac.jp/*"
 	],
 	"icons": {
 		"256": "icon.png"
 	},
-	"browser_action": {
+    "browser_action": {
 		"default_popup": "popup/index.htm"
 	},
 	"background": {
+        "persistent": false,
 		"scripts": ["background.js"]
 	},
 	"declarative_net_request" : {
